--- a/WebContent/SampleTesing-UI/sampleLanding.html
+++ b/WebContent/SampleTesing-UI/sampleLanding.html
@@ -7,7 +7,7 @@
 <link rel="icon" type="image/png" href="img/logo.png">
 <script src="js/angular.min.js"></script>
 <script src="js/common.js"></script>
-
+<link>
 
 <link rel="stylesheet" href="css/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="css/index-style.css">
